--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Kabirov7.github.io/kloop-table",
+  "homepage": "http://kloopmedia.github.io/ElectionsMonitoringDashboard",
   "name": "kloop-table",
   "version": "0.1.0",
   "private": true,
