--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "d3-collection": "^1.0.7",
     "firebase": "^7.20.0",
     "gh-pages": "^3.1.0",
     "material-table": "^1.69.0",
